# googleapis_client

./: .gitignore  CHANGELOG.md  README.md  pubspec.yaml  readme.md
.github/: FUNDING.yml
.github/workflows/: beta_compile.yaml
dev/: test_downloader.dart
example/: pubspec.yaml
example/lib/: youtube-downloader.dart
lib/: google_apis_client_key.dart  googleapis_client_core.dart
lib/apis/: gmail_forward_message.dart  gmail_send_message.dart  json_dart.dart  youtube_get_channel.dart  youtube_get_channel_by_video.dart  youtube_get_channel_full_info.dart  youtube_get_channel_video.dart  youtube_get_query_suggestions.dart  youtube_get_video.dart  youtube_get_video_comments.dart  youtube_subscribe_channel.dart  youtube_unsubscribe_channel.dart
lib/fork/youtube_explode_dart/: youtube_explode_dart.dart
lib/gmail/: gmail_core.dart
lib/scheme/: json_dart.dart  scheme.dart  service_account.dart  youtube_channel.dart  youtube_channel_full_info.dart  youtube_channel_links.dart  youtube_channel_thumbnails.dart  youtube_channel_videos.dart  youtube_schema_text.dart  youtube_search_suggestions.dart  youtube_search_videos.dart  youtube_video.dart  youtube_video_comment.dart  youtube_video_comments.dart  youtube_video_engagement.dart  youtube_video_manifest_audio.dart  youtube_video_manifest_stream.dart  youtube_video_manifest_video.dart  youtube_video_thumbnails.dart
lib/sheets/: sheets.dart
lib/utils/: utils.dart
lib/youtube/: youtube.dart  youtube_no_auth.dart
native_lib/: CMakeLists.txt  readme.md
node-js/googleapis-client/: package.json
node-js/googleapis-client/src/: index.js
node-js/googleapis-client/test/: test.js
package/googleapis_client/: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
package/googleapis_client/example/: pubspec.yaml
package/googleapis_client/lib/: google_apis_client_key.dart  googleapis_client.dart  googleapis_client_core.dart
package/googleapis_client/test/: googleapis_client_test.dart
package/googleapis_client_dart/: README.md  pubspec.yaml
package/googleapis_client_dart/lib/: googleapis_client_dart.dart
package/googleapis_client_dart/test/: googleapis_client_dart_test.dart
package/googleapis_client_flutter/: README.md  ffigen.yaml  pubspec.yaml
package/googleapis_client_flutter/src/: CMakeLists.txt
test/: youtube-downloader.dart
web/: README.md  pubspec.yaml
web/lib/: main.dart
web/linux/: CMakeLists.txt  my_application.cc
web/test/: widget_test.dart
web/web/: index.html
web/windows/: CMakeLists.txt
(+216 files in other folders)
